--- a/comoFunciona.html
+++ b/comoFunciona.html
@@ -82,9 +82,41 @@
         <section class="page-hero">
             <div class="page-hero-content">
                 <h1 data-aos="fade-up" data-aos-duration="1000">Como Funciona o <span class="text-gradient">EnvioDocs</span></h1>
-                <p data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">Entenda o processo completo de compartilhamento de documentos contábeis com seus clientes</p>
+                <p data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">De contador para contador: veja como é simples automatizar 100% dos envios de documentos</p>
+                <div style="margin-top: 30px;" data-aos="fade-up" data-aos-delay="300">
+                    <a href="index.html#contato" style="display: inline-block; background: linear-gradient(135deg, var(--color-destaque1), var(--color-destaque2)); color: white; padding: 15px 40px; border-radius: 50px; text-decoration: none; font-size: 1.1rem; font-weight: 600; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);">
+                        Testar Grátis por 14 Dias
+                        <i class="bi bi-arrow-right" style="margin-left: 10px;"></i>
+                    </a>
+                </div>
             </div>
             <div class="page-hero-pattern" data-aos="fade" data-aos-duration="1500"></div>
+        </section>
+
+        <!-- Vídeo Demo Section -->
+        <section style="padding: 80px 20px; background: linear-gradient(180deg, rgba(255, 255, 255, 0.02) 0%, rgba(255, 255, 255, 0.05) 100%);">
+            <div style="max-width: 1000px; margin: 0 auto; text-align: center;">
+                <h2 style="font-family: var(--font-grande); font-size: 2.5rem; color: var(--color-white); margin-bottom: 20px;" data-aos="fade-up">Veja na Prática em 2 Minutos</h2>
+                <p style="color: var(--color-gray2); font-size: 1.2rem; margin-bottom: 40px;" data-aos="fade-up" data-aos-delay="100">Assista como é rápido e simples usar o EnvioDocs no dia a dia</p>
+
+                <!-- Placeholder para vídeo -->
+                <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 15px; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.4);" data-aos="fade-up" data-aos-delay="200">
+                    <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(135deg, rgba(71, 140, 242, 0.2), rgba(142, 84, 233, 0.2)); display: flex; align-items: center; justify-content: center; border: 2px solid rgba(255, 255, 255, 0.1);">
+                        <div style="text-align: center;">
+                            <i class="bi bi-play-circle-fill" style="font-size: 5rem; color: var(--color-destaque1); margin-bottom: 20px;"></i>
+                            <p style="color: var(--color-white); font-size: 1.3rem; font-weight: 600;">Vídeo Demo - EnvioDocs em Ação</p>
+                            <p style="color: var(--color-gray2); font-size: 1rem; margin-top: 10px;">Duração: 2:30 min</p>
+                            <!-- TODO: Substituir por iframe do YouTube quando tiver o vídeo -->
+                            <!-- <iframe src="https://www.youtube.com/embed/SEU_VIDEO_ID" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allowfullscreen></iframe> -->
+                        </div>
+                    </div>
+                </div>
+
+                <p style="color: var(--color-gray2); margin-top: 25px; font-size: 0.95rem;">
+                    <i class="bi bi-check-circle-fill" style="color: var(--color-destaque1); margin-right: 5px;"></i>
+                    Sem instalação • Sem treinamento complexo • Pronto para usar em 24h
+                </p>
+            </div>
         </section>
 
         <!-- Fluxo de Trabalho -->
@@ -128,21 +160,21 @@
 
                     <div class="timeline-item" data-aos="fade-up" data-aos-delay="400">
                         <div class="timeline-icon">
-                            <i class="bi bi-envelope-check"></i>
+                            <i class="bi bi-bell"></i>
                         </div>
                         <div class="timeline-content">
-                            <h3>4. Notificação</h3>
-                            <p>Os clientes recebem notificações por e-mail quando novos documentos são disponibilizados.</p>
+                            <h3>4. Notificação Push</h3>
+                            <p>Os clientes recebem notificações automáticas no app quando novos documentos são disponibilizados.</p>
                         </div>
                     </div>
 
                     <div class="timeline-item" data-aos="fade-up" data-aos-delay="500">
                         <div class="timeline-icon">
-                            <i class="bi bi-laptop"></i>
+                            <i class="bi bi-phone"></i>
                         </div>
                         <div class="timeline-content">
-                            <h3>5. Acesso</h3>
-                            <p>Clientes acessam a plataforma com login e senha para visualizar seus documentos.</p>
+                            <h3>5. Acesso via App</h3>
+                            <p>Clientes acessam pelo app mobile (disponível na App Store e Play Store) para visualizar documentos.</p>
                         </div>
                     </div>
 
@@ -221,14 +253,44 @@
             <div class="section-pattern-bottom"></div>
         </section>
 
-        <!-- CTA -->
-        <section class="cta-section">
-            <div class="cta-container">
-                <h2 data-aos="fade-up">Pronto para começar?</h2>
-                <p data-aos="fade-up" data-aos-delay="100">Transforme a forma como você compartilha documentos com seus clientes</p>
-                <div class="cta-buttons" data-aos="fade-up" data-aos-delay="200">
-                    <a href="#" class="btn-primary">Experimente Grátis</a>
-                    <a href="#" class="btn-secondary">Agendar Demonstração</a>
+        <!-- CTA Final -->
+        <section class="cta-section" style="padding: 100px 20px; background: linear-gradient(135deg, rgba(71, 140, 242, 0.1), rgba(142, 84, 233, 0.1));">
+            <div class="cta-container" style="max-width: 800px; margin: 0 auto; text-align: center;">
+                <div style="margin-bottom: 30px;">
+                    <i class="bi bi-rocket-takeoff-fill" style="font-size: 4rem; color: var(--color-destaque1);"></i>
+                </div>
+                <h2 data-aos="fade-up" style="font-family: var(--font-grande); font-size: 2.8rem; color: var(--color-white); margin-bottom: 20px;">Pronto para Economizar 8 Horas por Semana?</h2>
+                <p data-aos="fade-up" data-aos-delay="100" style="color: var(--color-gray2); font-size: 1.3rem; margin-bottom: 40px; line-height: 1.6;">
+                    Teste o EnvioDocs gratuitamente por 14 dias.<br>
+                    Sem cartão de crédito. Sem compromisso. Setup em 24 horas.
+                </p>
+
+                <!-- Garantia -->
+                <div style="background: rgba(40, 167, 69, 0.1); padding: 25px; border-radius: 15px; border: 2px solid rgba(40, 167, 69, 0.3); margin-bottom: 40px;" data-aos="fade-up" data-aos-delay="200">
+                    <div style="display: flex; align-items: center; justify-content: center; gap: 15px; flex-wrap: wrap;">
+                        <i class="bi bi-shield-fill-check" style="font-size: 2.5rem; color: #28a745;"></i>
+                        <div style="text-align: left;">
+                            <h3 style="color: var(--color-white); font-size: 1.3rem; margin: 0;">Garantia de 30 Dias</h3>
+                            <p style="color: var(--color-gray2); font-size: 0.95rem; margin: 5px 0 0 0;">Se não economizar 5h/semana, devolvemos 100% do seu dinheiro</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cta-buttons" data-aos="fade-up" data-aos-delay="300" style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
+                    <a href="index.html#contato" class="btn-primary" style="display: inline-block; background: linear-gradient(135deg, var(--color-destaque1), var(--color-destaque2)); color: white; padding: 18px 50px; border-radius: 50px; text-decoration: none; font-size: 1.2rem; font-weight: 600; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);">
+                        Começar Teste Grátis Agora
+                        <i class="bi bi-arrow-right" style="margin-left: 10px;"></i>
+                    </a>
+                    <a href="index.html#contato" class="btn-secondary" style="display: inline-block; background: transparent; color: var(--color-white); padding: 18px 50px; border-radius: 50px; text-decoration: none; font-size: 1.2rem; font-weight: 600; border: 2px solid var(--color-destaque1);">
+                        Falar com Especialista
+                        <i class="bi bi-whatsapp" style="margin-left: 10px;"></i>
+                    </a>
+                </div>
+
+                <div style="margin-top: 30px; display: flex; justify-content: center; gap: 40px; flex-wrap: wrap; color: var(--color-gray2); font-size: 0.95rem;">
+                    <span><i class="bi bi-check-circle-fill" style="color: var(--color-destaque1); margin-right: 5px;"></i> Implementação em 24h</span>
+                    <span><i class="bi bi-check-circle-fill" style="color: var(--color-destaque1); margin-right: 5px;"></i> Suporte incluído</span>
+                    <span><i class="bi bi-check-circle-fill" style="color: var(--color-destaque1); margin-right: 5px;"></i> Cancele quando quiser</span>
                 </div>
             </div>
         </section>
