--- a/funcoes.html
+++ b/funcoes.html
@@ -83,8 +83,91 @@
         <!-- Hero -->
         <section class="page-hero" style="margin-bottom: 0; padding-bottom: 0; background: transparent;">
             <div class="page-hero-content">
-                <h1 data-aos="fade-up" data-aos-duration="1000">Funções do <span class="text-gradient">EnvioDocs</span></h1>
-                <p data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">Conheça todas as funcionalidades que tornam o EnvioDocs a solução ideal para seu escritório contábil</p>
+                <h1 data-aos="fade-up" data-aos-duration="1000">Tudo que Você Precisa <span class="text-gradient">em 1 Plataforma</span></h1>
+                <p data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">Descubra como o EnvioDocs automatiza 100% da gestão de documentos contábeis</p>
+                <div style="margin-top: 30px;" data-aos="fade-up" data-aos-delay="300">
+                    <a href="index.html#contato" style="display: inline-block; background: linear-gradient(135deg, var(--color-destaque1), var(--color-destaque2)); color: white; padding: 15px 40px; border-radius: 50px; text-decoration: none; font-size: 1.1rem; font-weight: 600; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);">
+                        Ver Planos e Preços
+                        <i class="bi bi-arrow-right" style="margin-left: 10px;"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Comparação com Concorrentes -->
+        <section style="padding: 80px 20px; background: linear-gradient(180deg, rgba(255, 255, 255, 0.02) 0%, rgba(255, 255, 255, 0.05) 100%);">
+            <div style="max-width: 1200px; margin: 0 auto;">
+                <div style="text-align: center; margin-bottom: 60px;">
+                    <h2 style="font-family: var(--font-grande); font-size: 2.5rem; color: var(--color-white); margin-bottom: 20px;" data-aos="fade-up">Por Que Escolher o EnvioDocs?</h2>
+                    <p style="color: var(--color-gray2); font-size: 1.2rem;" data-aos="fade-up" data-aos-delay="100">Compare e veja a diferença</p>
+                </div>
+
+                <div style="overflow-x: auto;">
+                    <table style="width: 100%; min-width: 700px; background: rgba(255, 255, 255, 0.03); border-radius: 15px; border: 1px solid rgba(255, 255, 255, 0.1); border-collapse: collapse;" data-aos="fade-up" data-aos-delay="200">
+                        <thead>
+                            <tr style="background: rgba(255, 255, 255, 0.05);">
+                                <th style="padding: 20px; text-align: left; color: var(--color-white); font-size: 1.1rem; border-bottom: 1px solid rgba(255, 255, 255, 0.1);">Recurso</th>
+                                <th style="padding: 20px; text-align: center; color: var(--color-destaque1); font-size: 1.2rem; font-weight: 700; border-bottom: 1px solid rgba(255, 255, 255, 0.1);">
+                                    <i class="bi bi-star-fill" style="margin-right: 5px;"></i>
+                                    EnvioDocs
+                                </th>
+                                <th style="padding: 20px; text-align: center; color: var(--color-gray2); font-size: 1.1rem; border-bottom: 1px solid rgba(255, 255, 255, 0.1);">WhatsApp/Email</th>
+                                <th style="padding: 20px; text-align: center; color: var(--color-gray2); font-size: 1.1rem; border-bottom: 1px solid rgba(255, 255, 255, 0.1);">Google Drive</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td style="padding: 20px; color: var(--color-white); border-bottom: 1px solid rgba(255, 255, 255, 0.05);">App personalizado para clientes</td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><i class="bi bi-check-circle-fill" style="color: #28a745; font-size: 1.5rem;"></i></td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><i class="bi bi-x-circle-fill" style="color: #dc3545; font-size: 1.5rem;"></i></td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><i class="bi bi-x-circle-fill" style="color: #dc3545; font-size: 1.5rem;"></i></td>
+                            </tr>
+                            <tr style="background: rgba(255, 255, 255, 0.02);">
+                                <td style="padding: 20px; color: var(--color-white); border-bottom: 1px solid rgba(255, 255, 255, 0.05);">Notificações automáticas</td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><i class="bi bi-check-circle-fill" style="color: #28a745; font-size: 1.5rem;"></i></td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><i class="bi bi-x-circle-fill" style="color: #dc3545; font-size: 1.5rem;"></i></td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><span style="color: var(--color-gray2);">Limitado</span></td>
+                            </tr>
+                            <tr>
+                                <td style="padding: 20px; color: var(--color-white); border-bottom: 1px solid rgba(255, 255, 255, 0.05);">Relatório de visualizações</td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><i class="bi bi-check-circle-fill" style="color: #28a745; font-size: 1.5rem;"></i></td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><i class="bi bi-x-circle-fill" style="color: #dc3545; font-size: 1.5rem;"></i></td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><span style="color: var(--color-gray2);">Básico</span></td>
+                            </tr>
+                            <tr style="background: rgba(255, 255, 255, 0.02);">
+                                <td style="padding: 20px; color: var(--color-white); border-bottom: 1px solid rgba(255, 255, 255, 0.05);">Organização automática</td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><i class="bi bi-check-circle-fill" style="color: #28a745; font-size: 1.5rem;"></i></td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><i class="bi bi-x-circle-fill" style="color: #dc3545; font-size: 1.5rem;"></i></td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><span style="color: var(--color-gray2);">Manual</span></td>
+                            </tr>
+                            <tr>
+                                <td style="padding: 20px; color: var(--color-white); border-bottom: 1px solid rgba(255, 255, 255, 0.05);">Envio de comprovantes por clientes</td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><i class="bi bi-check-circle-fill" style="color: #28a745; font-size: 1.5rem;"></i></td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><span style="color: var(--color-gray2);">Desorganizado</span></td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><span style="color: var(--color-gray2);">Confuso</span></td>
+                            </tr>
+                            <tr style="background: rgba(255, 255, 255, 0.02);">
+                                <td style="padding: 20px; color: var(--color-white); border-bottom: 1px solid rgba(255, 255, 255, 0.05);">Suporte técnico incluído</td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><i class="bi bi-check-circle-fill" style="color: #28a745; font-size: 1.5rem;"></i></td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><i class="bi bi-x-circle-fill" style="color: #dc3545; font-size: 1.5rem;"></i></td>
+                                <td style="padding: 20px; text-align: center; border-bottom: 1px solid rgba(255, 255, 255, 0.05);"><span style="color: var(--color-gray2);">Limitado</span></td>
+                            </tr>
+                            <tr>
+                                <td style="padding: 20px; color: var(--color-white); font-weight: 700;">Investimento mensal</td>
+                                <td style="padding: 20px; text-align: center; color: var(--color-destaque1); font-size: 1.5rem; font-weight: 700;">R$ 350</td>
+                                <td style="padding: 20px; text-align: center; color: var(--color-gray2);">Gratuito<br><span style="font-size: 0.85rem;">(mas custa tempo)</span></td>
+                                <td style="padding: 20px; text-align: center; color: var(--color-gray2);">R$ 20-100<br><span style="font-size: 0.85rem;">(por usuário)</span></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div style="text-align: center; margin-top: 40px;">
+                    <p style="color: var(--color-destaque1); font-size: 1.2rem; font-weight: 600;">
+                        <i class="bi bi-lightning-charge-fill" style="margin-right: 8px;"></i>
+                        O EnvioDocs economiza em média 8 horas/semana = R$ 2.400/mês em tempo
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -347,6 +430,40 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </section>
+
+            <!-- CTA Final -->
+            <section style="padding: 100px 20px; background: linear-gradient(135deg, rgba(71, 140, 242, 0.1), rgba(142, 84, 233, 0.1));">
+                <div style="max-width: 800px; margin: 0 auto; text-align: center;">
+                    <h2 style="font-family: var(--font-grande); font-size: 2.8rem; color: var(--color-white); margin-bottom: 20px;" data-aos="fade-up">Pronto para Transformar Seu Escritório?</h2>
+                    <p style="color: var(--color-gray2); font-size: 1.3rem; margin-bottom: 40px; line-height: 1.6;" data-aos="fade-up" data-aos-delay="100">
+                        Junte-se a mais de 150 contabilidades que já economizam 8 horas por semana
+                    </p>
+
+                    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 40px;">
+                        <div style="padding: 20px; background: rgba(255, 255, 255, 0.03); border-radius: 10px;" data-aos="fade-up" data-aos-delay="200">
+                            <div style="font-size: 2.5rem; color: var(--color-destaque1); font-weight: 700;">R$ 350</div>
+                            <div style="color: var(--color-gray2); font-size: 0.9rem;">por mês</div>
+                        </div>
+                        <div style="padding: 20px; background: rgba(255, 255, 255, 0.03); border-radius: 10px;" data-aos="fade-up" data-aos-delay="300">
+                            <div style="font-size: 2.5rem; color: var(--color-destaque1); font-weight: 700;">Ilimitado</div>
+                            <div style="color: var(--color-gray2); font-size: 0.9rem;">clientes</div>
+                        </div>
+                        <div style="padding: 20px; background: rgba(255, 255, 255, 0.03); border-radius: 10px;" data-aos="fade-up" data-aos-delay="400">
+                            <div style="font-size: 2.5rem; color: var(--color-destaque1); font-weight: 700;">24h</div>
+                            <div style="color: var(--color-gray2); font-size: 0.9rem;">implementação</div>
+                        </div>
+                    </div>
+
+                    <a href="index.html#contato" style="display: inline-block; background: linear-gradient(135deg, var(--color-destaque1), var(--color-destaque2)); color: white; padding: 20px 60px; border-radius: 50px; text-decoration: none; font-size: 1.3rem; font-weight: 600; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3); margin-bottom: 20px;" data-aos="fade-up" data-aos-delay="500">
+                        Começar Teste Grátis de 14 Dias
+                        <i class="bi bi-arrow-right" style="margin-left: 10px;"></i>
+                    </a>
+
+                    <p style="color: var(--color-gray2); font-size: 0.9rem;">
+                        ✓ Sem cartão de crédito • ✓ Cancele quando quiser • ✓ Garantia de 30 dias
+                    </p>
                 </div>
             </section>
 
