--- a/CONTABILIDADE/clientes.html
+++ b/CONTABILIDADE/clientes.html
@@ -123,6 +123,76 @@
         input[type="date"]::-webkit-calendar-picker-indicator {
             filter: invert(1);
         }
+
+        /* Estilos para o modal de migração */
+        .migration-item {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 8px 12px;
+            border-radius: 6px;
+            background: rgba(255,255,255,0.05);
+            font-size: 14px;
+        }
+
+        .migration-item span:first-child {
+            font-size: 16px;
+            font-weight: bold;
+            min-width: 20px;
+        }
+
+        .migration-item span:nth-child(2) {
+            flex: 1;
+            color: var(--color-white);
+        }
+
+        .migration-item span.text-danger,
+        .migration-item span.text-success {
+            font-weight: 600;
+        }
+
+        .migration-item.migration-success {
+            background: rgba(40, 167, 69, 0.1);
+            border-left: 3px solid #28a745;
+        }
+
+        .migration-item.migration-error {
+            background: rgba(220, 53, 69, 0.1);
+            border-left: 3px solid #dc3545;
+        }
+
+        .text-success {
+            color: #28a745;
+        }
+
+        .text-danger {
+            color: #dc3545;
+        }
+
+        /* Hover do botão de migração */
+        #migrationBtn:hover {
+            background-color: #d55e2c !important;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(255, 107, 53, 0.3);
+        }
+
+        /* Animação de hover dos botões do modal de migração */
+        #closeMigrationBtn:hover {
+            opacity: 1 !important;
+        }
+
+        #startMigrationBtn:hover {
+            background: #d55e2c !important;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(255, 107, 53, 0.4) !important;
+        }
+
+        #startMigrationBtn:disabled {
+            background: #6c757d !important;
+            cursor: not-allowed !important;
+            transform: none !important;
+            box-shadow: none !important;
+        }
     </style>
 </head>
 
@@ -221,6 +291,9 @@
                     </button>
                     <button class="btn btn-primary" id="addClienteBtn">
                         <i class="bi bi-plus-lg"></i> Novo Cliente
+                    </button>
+                    <button class="btn btn-warning" id="migrationBtn" style="background-color: #ff6b35; border-color: #ff6b35; color: white; font-weight: 600;">
+                        <i class="bi bi-exclamation-triangle-fill"></i> MIGRAR TODOS OS CLIENTES PARA NOVO BANCO
                     </button>
                 </div>
             </div>
@@ -415,10 +488,69 @@
         </div>
     </div>
 
+    <!-- Modal de Migração de Clientes -->
+    <div id="migrationModal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); z-index: 10000; overflow: auto;">
+        <div style="background: linear-gradient(145deg, #1a2330, #0d161f); width: 800px; max-width: 95%; margin: 3% auto; padding: 30px; border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,0.5); border: 2px solid #ff6b35;">
+            <div style="margin-bottom: 25px; border-bottom: 2px solid #ff6b35; padding-bottom: 20px; display: flex; justify-content: space-between; align-items: center;">
+                <h3 style="margin: 0; font-size: 24px; color: var(--color-white); font-weight: 700;">
+                    <i class="bi bi-exclamation-triangle-fill" style="color: #ff6b35; margin-right: 10px;"></i>
+                    Migração de Clientes para Novo Banco
+                </h3>
+                <button id="closeMigrationBtn" style="background: none; border: none; font-size: 28px; cursor: pointer; color: var(--color-white); opacity: 0.7; transition: opacity 0.2s;">&times;</button>
+            </div>
+
+            <!-- Aviso Importante -->
+            <div style="background: rgba(255, 107, 53, 0.1); border: 2px solid #ff6b35; border-radius: 8px; padding: 20px; margin-bottom: 25px;">
+                <h4 style="color: #ff6b35; margin: 0 0 10px 0; font-size: 18px;">
+                    <i class="bi bi-info-circle-fill"></i> Atenção!
+                </h4>
+                <p style="color: var(--color-white); margin: 5px 0; line-height: 1.6;">
+                    Esta operação irá migrar <strong>TODOS os clientes</strong> do banco antigo para o novo banco de dados.
+                </p>
+                <p style="color: var(--color-white); margin: 5px 0; line-height: 1.6;">
+                    <strong>Banco Origem:</strong> osnjsgleardkzrnddlgt.supabase.co<br>
+                    <strong>Banco Destino:</strong> jplshxnojablvnxuddcg.supabase.co
+                </p>
+                <p style="color: #ff6b35; margin: 10px 0 0 0; font-weight: 600;">
+                    <i class="bi bi-exclamation-triangle"></i> Esta operação pode levar vários minutos dependendo da quantidade de clientes.
+                </p>
+            </div>
+
+            <!-- Botão de Iniciar -->
+            <div style="text-align: center; margin-bottom: 25px;">
+                <button id="startMigrationBtn" style="background: #ff6b35; color: white; border: none; padding: 15px 40px; border-radius: 8px; cursor: pointer; font-size: 16px; font-weight: 600; transition: background-color 0.2s; box-shadow: 0 4px 15px rgba(255, 107, 53, 0.3);">
+                    <i class="bi bi-play-fill" style="margin-right: 8px;"></i>Iniciar Migração
+                </button>
+            </div>
+
+            <!-- Progresso da Migração -->
+            <div style="margin-top: 25px; padding-top: 25px; border-top: 1px solid rgba(255,255,255,0.1);">
+                <div style="margin-bottom: 15px;">
+                    <span style="color: var(--color-white); font-weight: 600;">Progresso:</span>
+                    <span id="migrationProgressText" style="color: rgba(255,255,255,0.7); margin-left: 10px;">Aguardando início...</span>
+                </div>
+                <div style="width: 100%; background: rgba(255,255,255,0.1); border-radius: 10px; height: 20px; overflow: hidden; margin-bottom: 20px;">
+                    <div id="migrationProgressBar" style="height: 100%; background: linear-gradient(90deg, #ff6b35, #ff8c5f); width: 0%; transition: width 0.3s ease; border-radius: 10px; display: flex; align-items: center; justify-content: center; color: white; font-weight: 600; font-size: 12px;">0%</div>
+                </div>
+
+                <!-- Lista de Progresso -->
+                <div style="background: rgba(0,0,0,0.3); border-radius: 8px; padding: 15px; max-height: 300px; overflow-y: auto;">
+                    <h4 style="color: var(--color-white); margin: 0 0 15px 0; font-size: 16px;">
+                        <i class="bi bi-list-ul"></i> Log de Migração:
+                    </h4>
+                    <div id="migrationProgressList" style="display: flex; flex-direction: column; gap: 8px;">
+                        <!-- Itens serão adicionados aqui dinamicamente -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="assets/js/supabase.js"></script>
     <script src="assets/js/session-guard.js"></script>
+    <script src="assets/js/migration.js"></script>
     <script>
         // Aguardar o carregamento do DOM
         document.addEventListener('DOMContentLoaded', async function() {
