--- a/CONTABILIDADE/dashboard.html
+++ b/CONTABILIDADE/dashboard.html
@@ -417,9 +417,7 @@
                                     <option value="12">Dezembro</option>
                                 </select>
                                 <select id="anoSelect" class="form-control">
-                                    <option value="2023">2023</option>
-                                    <option value="2024">2024</option>
-                                    <option value="2025">2025</option>
+                                    <!-- Anos serão preenchidos dinamicamente -->
                                 </select>
                                 <select id="tipoRelatorioSelect" class="form-control">
                                     <option value="">Todos os Tipos</option>
