Force deploy - fix anos 2026

--- a/CONTABILIDADE/dashboard.html
+++ b/CONTABILIDADE/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Atualizado: 2026-02-02 - Fix seletor de anos -->
+<!-- Build: 2026-02-02-v2 -->
 <html lang="pt-br">
 
 <head>
